--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,11 @@
   overflow: hidden;
 }
 
+h1,
+h2 {
+  font-family: PT serif, sans-serif;
+}
+
 a {
   text-decoration: none;
 }
@@ -127,3 +132,60 @@ body {
 .features
 .forms
 .footer */
+
+.suggestions {
+  background-color: gray;
+}
+
+.suggestions-title {
+  color: var(--second-text-color);
+
+  font-family: Pt serif, sans-serif;
+  font-weight: bold;
+  font-size: 30px;
+  line-height: 1.3;
+}
+
+.suggestions-link {
+  color: var(--second-text-color);
+}
+
+.suggestions-sub-title {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.3;
+}
+
+.suggestions-price {
+  font-size: 16px;
+  line-height: 1.3;
+}
+
+/* Карта Байкала */
+.map-title {
+  color: var(--first-text-col);
+  font-family: Pt serif, sans-serif;
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 1.3;
+}
+
+/* О Байкале */
+.about-title {
+  font-family: Pt serif, sans-serif;
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 1.3;
+}
+
+.about-discription {
+  font-size: 18px;
+  line-height: 1.4;
+  color: #333333;
+}
+
+.about-link {
+  font-size: 16px;
+  line-height: 1.1;
+  color: #76767a;
+}
