--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,8 @@
 :root {
-  --light-color-text: #ffffff;
-  --dark-color-text: #000000;
+  --first-text-col: #000000;
+  --second-text-color: #ffffff;
+  --first-text-family: Roboto, sans-serif;
+  --second-text-family: Rt serif, sans-serif;
 }
 
 .visually-hidden {
@@ -18,8 +20,17 @@
 }
 
 h1,
-h2 {
-  font-family: PT serif, sans-serif;
+h2,
+h3,
+h4,
+ul,
+p {
+  margin: 0;
+  padding: 0;
+}
+
+img {
+  display: block;
 }
 
 a {
@@ -31,110 +42,228 @@ ul {
 }
 
 body {
-  font-family: Roboto, sans-serif;
+  font-family: var(--first-text-family);
+  font-style: normal;
+  font-weight: 400;
 }
 
-/* Header */
+.container {
+  width: 1150px;
+  /* margin: 0 auto; */
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+/* Шапка */
 
 .header {
-  color: var(--light-color-text);
-  background-color: violet;
+  color: var(--second-text-color);
+  background-color: gray;
 }
 
 .header-logo {
-  font-family: PT serif, sans-serif;
+  color: var(--second-text-color);
+  font-family: PT Serif, sans-serif;
   font-weight: 700;
   font-size: 20px;
-  color: var(--light-color-text);
 }
 
-.header-logo-text {
-  font-size: 18px;
+.header-logo-text-first {
+  color: var(--second-text-color);
+
+  font-family: var(--second-text-family);
+  font-weight: 700;
+  font-size: 20px;
   line-height: 21px;
 }
-.header-contacts {
+
+.header-logo-text-second {
+  color: var(--second-text-color);
+  font-size: 18px;
+  line-height: 1.1;
+}
+
+.header-contacts-link {
+  color: var(--second-text-color);
+
   font-weight: 700;
   font-size: 18px;
   line-height: 1.3;
 }
-.header-contacts-link {
-  color: var(--light-color-text);
-}
+
 .header-button {
+  background-color: rgba(255, 255, 255, 0);
+  color: var(--second-text-color);
+
+  min-width: 186px;
+  height: 44px;
+
   font-family: inherit;
-  color: var(--light-color-text);
-  background-color: transparent;
+  font-size: 16px;
+  line-height: 1.2;
+
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  border-radius: 22px;
 }
 
 .header-nav-link {
+  color: var(--second-text-color);
+
   font-size: 16px;
-  line-height: 19px;
-  color: var(--light-color-text);
+  line-height: 1.2;
 }
 
-/* Hero */
+/* Герой */
 
 .hero {
-  color: var(--light-color-text);
-  background-color: wheat;
+  max-width: 1920px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 226px;
+  padding-bottom: 33px;
+  background-color: gray;
+  background-image: url("../images/Главный-экран.jpg");
+  background-repeat: no-repeat;
+  /* background-size: contain; */
+
+  color: var(--second-text-color);
 }
+
 .hero-title {
-  font-size: PT Serif, sans-serife;
+  margin-bottom: 8px;
+  font-family: Pt serif, sans-serif;
+
   font-weight: 700;
   font-size: 90px;
-  line-height: 1.3;
+  line-height: 1.3em;
 }
 
 .hero-description {
+  margin-bottom: 94px;
   font-size: 20px;
-  line-height: 1.4;
+  line-height: 1.4em;
 }
 
 .hero-button {
-  font-weight: 500;
-  font-size: 18px;
-  line-height: 1.1;
-  color: var(--light-color-text);
+  margin-bottom: 184px;
+  display: inline-block;
+  color: var(--second-text-color);
+  padding: 19px 53px;
+
+  font-family: inherit;
+  font-style: 18px;
   text-transform: uppercase;
+  text-align: center;
+
+  border: 1px solid rgba(255, 255, 255, 1);
+  border-radius: 30px;
+}
+
+.hero-down {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 40px;
+  height: 40px;
+  border: 1px solid #ffffff;
+  border-radius: 50%;
+  fill: var(--second-text-color);
 }
 
 /* Категории туров */
-.categories-link {
-  color: var(--dark-color-text);
-}
-.categories-description {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.1;
-  color: var(--dark-color-text);
+
+.categories {
+  padding-top: 64px;
+  padding-bottom: 64px;
+  color: var(--first-text-col);
 }
 
+.categories-title {
+  font-family: Roboto, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.2;
+}
+
+.categories-list {
+  display: flex;
+  flex-wrap: wrap;
+  margin-right: -32px;
+  margin-bottom: -32px;
+}
+
+.categories-item {
+  width: 256px;
+  margin-right: 32px;
+  margin-bottom: 32px;
+  border: 1px solid #d9d9de;
+  border-radius: 6px;
+}
+
+.categories-link {
+  color: var(--first-text-col);
+}
+
+.categories-container {
+  padding: 13px 19px 16px 19px;
+}
+
+.categories-description {
+  font-family: Roboto, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.2;
+}
+
+/* Основные направления деятельности */
+
 .directions {
+  /* color: var(--first-text-col); */
   background-color: rgba(112, 207, 41, 0.07);
+  padding: 44px;
 }
 
 .directions-title {
-  font-family: PT Serif, sans-serif;
+  /* color: var(--first-text-col); */
+  font-family: Pt serif, sans-serif;
+  /* font-style: normal; */
   font-weight: 700;
   font-size: 30px;
-  line-height: 1.3;
+  text-align: center;
+  margin-bottom: 50px;
 }
-.directions-text {
-  font-size: 16px;
-  line-height: 1.3;
+
+.direction-list {
+  display: flex;
+  flex-wrap: wrap;
+  margin-right: -33px;
+  margin-bottom: -37px;
+}
+
+.direction-item {
+  width: 252px;
+  margin-right: 33px;
+  margin-bottom: 37px;
+}
+
+.directions-icon {
+  margin-bottom: 16px;
+}
+
+.direction-text {
+  font-style: 16px;
+  line-height: 1.31;
   color: #333333;
 }
 
-/*
-.suggestions
-.map
-.about
-.features
-.forms
-.footer */
+/* Популярные предложения */
 
 .suggestions {
-  background-color: gray;
+  background-color: #e5e5e5;
 }
 
 .suggestions-title {
@@ -161,8 +290,54 @@ body {
   line-height: 1.3;
 }
 
-/* Карта Байкала */
+/*  Карта Байкала */
+
+.map {
+  padding-top: 70px;
+}
+
 .map-title {
+  color: var(--first-text-col);
+  font-family: Pt serif, sans-serif;
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 1.38;
+  margin-bottom: 37px;
+  text-align: center;
+}
+
+/*  О Байкале  */
+
+.about {
+  padding-top: 70px;
+  padding-bottom: 79px;
+}
+
+.about-title {
+  font-family: Pt serif, sans-serif;
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 1.3;
+  text-align: center;
+  margin-bottom: 37px;
+}
+
+.about-description {
+  font-size: 18px;
+  line-height: 1.4;
+  color: #333333;
+}
+
+.about-link {
+}
+
+/* Фотогалерея */
+
+.gallery {
+  background-color: rgba(63, 169, 245, 0.07);
+}
+
+.gallery-title {
   color: var(--first-text-col);
   font-family: Pt serif, sans-serif;
   font-weight: 700;
@@ -170,22 +345,99 @@ body {
   line-height: 1.3;
 }
 
-/* О Байкале */
-.about-title {
+.gallery-link {
+  color: #0050b2;
+
+  font-size: 16px;
+  line-height: 1.2;
+  text-decoration: underline;
+}
+
+.gallery-link:hover,
+.gallery-link:focus {
+  color: rgba(0, 80, 178, 1);
+}
+
+.gallery-button {
+  text-align: center;
+  color: #0061d9;
+  border: 1px solid #0061d9;
+  border-radius: 50%;
+  box-sizing: border-box;
+}
+
+/* Проеимущества отдыха */
+
+.advantages-sub-title {
+  color: var(--first-text-col);
+
   font-family: Pt serif, sans-serif;
   font-weight: 700;
-  font-size: 30px;
+  font-size: 44px;
+  line-height: 1.3;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.advantages-description {
+  color: #333333;
+  font-size: 18px;
+  line-height: 1.4;
+}
+
+.feautures-sub-title {
+  color: lightblue;
+  font-family: PT serif, sans-serif;
+  font-weight: 700;
+  font-size: 58px;
   line-height: 1.3;
 }
 
-.about-discription {
-  font-size: 18px;
-  line-height: 1.4;
-  color: #333333;
+.feautures-description {
+  color: var(--first-text-col);
+  font-weight: 500;
+  line-height: 1.3;
 }
 
-.about-link {
+.footer {
+  background-color: #202020;
+}
+
+.footer-title {
+  color: var(--second-text-color);
+
+  font-weight: 500;
   font-size: 16px;
-  line-height: 1.1;
-  color: #76767a;
+  line-height: 1.2;
+  text-transform: uppercase;
+}
+
+.footer-links {
+  color: var(--second-text-color);
+  opacity: 0.8;
+
+  font-size: 16px;
+  line-height: 1.3;
+}
+
+.footer-sub-title {
+  color: var(--second-text-color);
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.3;
+}
+
+.footer-sub-discription {
+  color: var(--second-text-color);
+  opacity: 0.8;
+
+  font-weight: 14px;
+  line-height: 1.3;
+  list-style: none;
+  text-decoration: none;
+}
+
+address {
+  list-style-type: none;
+  text-decoration: none;
 }
