--- a/css/styles.css
+++ b/css/styles.css
@@ -60,14 +60,30 @@ body {
 
 .header {
   color: var(--second-text-color);
-  background-color: gray;
+
+  position: absolute;
+  width: 100%;
 }
 
 .header-logo {
+  display: flex;
+  align-items: center;
+
   color: var(--second-text-color);
   font-family: PT Serif, sans-serif;
   font-weight: 700;
   font-size: 20px;
+}
+
+.header-logo-wrapper {
+  margin-right: 179px;
+  padding-left: 20px;
+}
+
+.header-title {
+  display: flex;
+  align-items: center;
+  padding: 13px 0 14px 0;
 }
 
 .header-logo-text-first {
@@ -85,20 +101,22 @@ body {
   line-height: 1.1;
 }
 
+.header-contacts {
+  display: flex;
+}
+
 .header-contacts-link {
   color: var(--second-text-color);
-
+  margin-right: 33px;
   font-weight: 700;
   font-size: 18px;
   line-height: 1.3;
 }
 
 .header-button {
-  background-color: rgba(255, 255, 255, 0);
-  color: var(--second-text-color);
-
   min-width: 186px;
-  height: 44px;
+  padding: 12px 16px;
+  margin-left: auto;
 
   font-family: inherit;
   font-size: 16px;
@@ -106,16 +124,42 @@ body {
 
   border: 1px solid rgba(255, 255, 255, 0.5);
   border-radius: 22px;
+
+  background-color: rgba(255, 255, 255, 0);
+  color: var(--second-text-color);
+}
+
+.header-menu {
+  display: flex;
+  padding-top: 20px;
+}
+
+.header-link {
+  margin-right: 32px;
+}
+
+.header-link:last-child {
+  margin-right: 0;
 }
 
 .header-nav-link {
-  color: var(--second-text-color);
-
   font-size: 16px;
   line-height: 1.2;
+  color: var(--second-text-color);
 }
 
 /* Герой */
+
+.hero::before {
+  content: "";
+  position: absolute;
+  top: 81px;
+  left: 0;
+  background-color: #c4c4c4;
+  opacity: 0.3;
+  width: 100%;
+  height: 1px;
+}
 
 .hero {
   max-width: 1920px;
@@ -162,14 +206,20 @@ body {
 }
 
 .hero-down {
-  display: block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
   margin-left: auto;
   margin-right: auto;
   width: 40px;
   height: 40px;
   border: 1px solid #ffffff;
   border-radius: 50%;
-  fill: var(--second-text-color);
+}
+
+.hero-icon-down {
+  stroke: white;
 }
 
 /* Категории туров */
